Fix vertical alignment issue

--- a/static/styles/components/project-card.scss
+++ b/static/styles/components/project-card.scss
@@ -4,8 +4,8 @@
 .project-list .card {
   margin: 1em 0 1em 1em;
   background: #fff;
-  display: block;
-  float: left;
+  display: inline-block;
+  vertical-align: top;
   width: 20em;
   border-radius: 0.5em;
   box-shadow: 0 1px 1px 1px rgba(0,0,0,0.1);
